fix vertical-align

--- a/fis3-boilerplate/source/static/style/component/_check.scss
+++ b/fis3-boilerplate/source/static/style/component/_check.scss
@@ -23,7 +23,7 @@ $name-space: u;
     padding: 2px;
     border-radius: 2px;
     transition-property: border, box-shadow;
-    vertical-align: -.125em;
+    vertical-align: -.25em;
 
     &,
     &::before,
